# cg-probes

./: .env.example  .gitattributes  .gitignore  DATA_STATEMENT.md  README.md  REPRODUCE.md  pyproject.toml
benchmark/: _gold.py  _viz.py  annotations_pull.py  baselines_llm.py  counterfactual.py  embedders.py  eval_golden.py  figures.py  human_benchmark.py  make_report.py  metrics.py  probe.py  probe_extra.py  probe_methods.py  rag_single_embedding.py  report_safeguard.py  rerun_safeguard_high.py  run_embed.py  throughput_probe.py  tier1_validity.py  tier2_robustness.py
benchmark/cache/: human_iaa.json  rag_single_embedding.html  rag_single_embedding.json  report.html  results_human.json  results_probe.json  results_probe__human.json  tier1.json  tier1__human.json  tier2.json
benchmark/prompts/: counterfactual_v1.txt  triage_policy_v1.txt
contrastive/: __init__.py  assemble_pairs.py  build_anchor_pool.py  build_playground_test_set.py  compare_generators.py  llm_client.py  p2_io.py  paths.py  schemas.py  synth_variants.py  textnorm.py
contrastive/cache/: probe_dataset_ET.parquet  probe_dataset_MU.parquet  probe_dataset_PU.parquet
data/: README.md  cluster_manifest.jsonl  example_search_logs.csv
docs/: ET.EN.md  ET.md  MU.EN.md  PU.EN.md  PU.md  README.md  axes-snapshot.EN.md  axes-snapshot.md
golden/pipeline_v2/: _io.py  (+10 more)
prompts/: probe-training-pair-generation.md
search-logs-bertopic/: _sample_clicks1.py  bertopic_query_clusters.ipynb  cluster_cards.py  czech_stopwords.py  embed_harrier_hfie.py  embed_qwen3.py  filters.py  preprocess.py  unify_queries.py
(+89 files in other folders)
